--- a/serviceB/src/main/resources/application.yml
+++ b/serviceB/src/main/resources/application.yml
@@ -3,10 +3,10 @@
 # 开发环境配置
 server:
   # 服务器的HTTP端口，默认为80
-  port: 8188
+  port: 8889
   servlet:
     # 应用的访问路径
-    context-path: /serviceA/
+    context-path: /serverB/
   tomcat:
     # tomcat的URI编码
     uri-encoding: UTF-8
