--- a/serviceB/pom.xml
+++ b/serviceB/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>serviceA</artifactId>
+    <artifactId>serviceB</artifactId>
 
 
 </project>
