--- a/commom/pom.xml
+++ b/commom/pom.xml
@@ -9,16 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>serviceA</artifactId>
+    <artifactId>commom</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
     <dependencies>
-        <dependency>
-            <groupId>master.dubbo.service</groupId>
-            <artifactId>serviceB</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-<!--
+
         <dependency>
             <groupId>com.codingapi.txlcn</groupId>
             <artifactId>txlcn-tc</artifactId>
@@ -29,7 +25,6 @@
             <groupId>com.codingapi.txlcn</groupId>
             <artifactId>txlcn-txmsg-netty</artifactId>
             <version>5.0.2.RELEASE</version>
-        </dependency>-->
+        </dependency>
     </dependencies>
-
 </project>
