--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
     <modules>
         <module>serviceA</module>
         <module>serviceB</module>
+        <module>txlcn_client</module>
+        <module>commom</module>
     </modules>
 
     <properties>
@@ -39,11 +41,11 @@
         <jsoup.version>1.11.3</jsoup.version>
         <poi.version>3.17</poi.version>
         <velocity.version>1.7</velocity.version>
+        <codingapi.txlcn.version>5.0.2.RELEASE</codingapi.txlcn.version>
     </properties>
 
     <!-- 依赖声明 -->
     <dependencies>
-
         <!-- SpringBoot Web容器 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -59,10 +61,9 @@
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <!--                <version>2.2.0.RELEASE</version>-->
         <version>2.1.3.RELEASE</version>
         <type>pom</type>
-        <scope>import</scope>
+        <scope>test</scope>
     </dependency>
 
     <!--阿里数据库连接池 -->
@@ -90,7 +91,6 @@
             <artifactId>dubbo-dependencies-bom</artifactId>
             <version>2.7.3</version>
             <type>pom</type>
-            <scope>import</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.dubbo</groupId>
@@ -210,7 +210,39 @@
             <version>${fastjson.version}</version>
         </dependency>
 
+     <!--<dependency>
+            <groupId>com.codingapi.txlcn</groupId>
+            <artifactId>txlcn-tc</artifactId>
+            <version>${codingapi.txlcn.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.codingapi.txlcn</groupId>
+            <artifactId>txlcn-tm</artifactId>
+            <version>${codingapi.txlcn.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.codingapi.txlcn</groupId>
+            <artifactId>txlcn-txmsg-netty</artifactId>
+            <version>${codingapi.txlcn.version}</version>
+        </dependency>-->
+
+
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
