--- a/serviceA/src/main/resources/application-druid.yml
+++ b/serviceA/src/main/resources/application-druid.yml
@@ -4,9 +4,9 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     sql-script-encoding: UTF-8
-    url: jdbc:mysql://47.95.122.58:3306/master?useUnicode=true&allowMultiQueries=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+    url: jdbc:mysql://127.0.0.1:3306/dubbo_service_lcn?useUnicode=true&allowMultiQueries=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
     username: root
-    password: BAJ2017baj
+    password: root
     druid:
       # 初始连接数
       initialSize: 5
