--- a/serviceB/pom.xml
+++ b/serviceB/pom.xml
@@ -10,6 +10,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>serviceB</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>master.dubbo.service</groupId>
+            <artifactId>commom</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
