--- a/serviceB/src/main/resources/application.yml
+++ b/serviceB/src/main/resources/application.yml
@@ -14,7 +14,6 @@ server:
     max-threads: 800
     # Tomcat启动初始化的线程数，默认值25
     min-spare-threads: 30
-
 # 日志配置
 logging:
   level:
@@ -100,44 +99,10 @@ pagehelper:
   params: count=countSql
 
 #跨域访问的域名
-cross:
-  domain: http://dev-master.zgzhongnan.com:8089
+#cross:
+#  domain: http://dev-master.zgzhongnan.com:8089
 
 
-# Shiro
-shiro:
-  jessionid: znsession
-  user:
-    # 登录地址
-    loginUrl: http://dev-master.zgzhongnan.com/master/login
-    # 权限认证失败地址
-    unauthorizedUrl: /unauth
-    # 首页地址
-    indexUrl: /index
-    # 验证码开关
-    captchaEnabled: false
-    # 验证码类型 math 数组计算 char 字符
-    captchaType: math
-  cookie:
-    # 设置Cookie的域名 默认空，即当前访问的域名
-    domain: zgzhongnan.com
-    # 设置cookie的有效访问路径
-    path: /
-    # 设置HttpOnly属性
-    httpOnly: true
-    # 设置Cookie的过期时间，天为单位
-    maxAge: 30
-  session:
-    # Session超时时间，-1代表永不过期（默认30分钟）
-    expireTime: 30
-    # 同步session到数据库的周期（默认1分钟）
-    dbSyncPeriod: 1
-    # 相隔多久检查一次session的有效性，默认就是10分钟
-    validationInterval: 10
-    # 同一个用户最大会话数，比如2的意思是同一个账号允许最多同时两个人登录（默认-1不限制）
-    maxSession: -1
-    # 踢出之前登录的/之后登录的用户，默认踢出之前登录的用户
-    kickoutAfter: false
 
 # 防止XSS攻击
 xss:
@@ -152,19 +117,19 @@ xss:
 # dubbo配置
 dubbo:
   application:
-    name: dubbo-service
-    qos-port: 22225
+    name: dubbo-serviceB
+    qos-port: 22224
     qos-enable: true
     qos-accept-foreign-ip: false
   registry:
-    address: zookeeper://127.0.0.1:2181
+    address: zookeeper://192.168.2.143:2181
 #    address: zookeeper://192.168.0.178:2181
-#  scan:
-#    base-packages: com.znkj.property
+# scan:
+#   base-packages: com.dubbo.lcn.serviceB
   metadata-report:
-    address: zookeeper://127.0.0.1:2181
+    address: zookeeper://192.168.2.143:2181
   protocol:
-    port: 20884
+    port: 20885
     name: dubbo
 #    threads: 500
 #    accepts: 1000
@@ -182,3 +147,6 @@ dubbo:
     check: false
 
 
+#tx-lcn:
+#  client:
+#    manager-address: 127.0.0.1:8070
