--- a/txlcn_client/pom.xml
+++ b/txlcn_client/pom.xml
@@ -9,27 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>serviceA</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>txlcn_client</artifactId>
+    <version>1.0.0</version>
 
     <dependencies>
         <dependency>
-            <groupId>master.dubbo.service</groupId>
-            <artifactId>serviceB</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-<!--
-        <dependency>
             <groupId>com.codingapi.txlcn</groupId>
-            <artifactId>txlcn-tc</artifactId>
+            <artifactId>txlcn-tm</artifactId>
             <version>5.0.2.RELEASE</version>
         </dependency>
-
-        <dependency>
-            <groupId>com.codingapi.txlcn</groupId>
-            <artifactId>txlcn-txmsg-netty</artifactId>
-            <version>5.0.2.RELEASE</version>
-        </dependency>-->
     </dependencies>
 
 </project>
